# agenticAI

./: .gitignore  QUICK_ANSWER.md  README.md  SEARCH_COMPARISON.md  SETUP_WEB_SEARCH.md  docker-compose.yml  main.py  pyproject.toml  test_search.py
.claude/skills/daily-summary/: SKILL.md
.claude/skills/markdown-processing/: SKILL.md
.claude/skills/obsidian-integration/: SKILL.md
.claude/skills/obsidian-integration/scripts/: ObsidianTool.py  __init__.py
.claude/skills/open-research/: SKILL.md
.claude/skills/web-search/: SKILL.md
.claude/skills/web-search/scripts/: DuckDuckGoSearchTool.py  WebSearchTool.py  __init__.py
agents/: agents.yaml
orchestrator/: AgentOrchestrator.py
